# twitterclone

./: LICENSE  pyproject.toml  todo.txt
assets/: twitterclone.css
authentication/: urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
templates/: base.html  general_form.html  index.html  individual_tweet.html  menu_bar.html  notifications.html  tweet_detail.html  user_detail_block.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
